--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 
 <section class="section section_navbar">
     <div class="container-fluid container-fluid-grid">
+        <div class="grid grid-bgWhite">
+            <div class="grid-item grid-1"></div>
+            <div class="grid-item grid-2"></div>
+            <div class="grid-item grid-3"></div>
+            <div class="grid-item grid-4"></div>
+            <div class="grid-item grid-5"></div>
+        </div>
         <div class="grid">
             <div class="grid-item grid-1"></div>
             <div class="grid-item grid-2"></div>
@@ -165,15 +172,6 @@
 
 
 <section class="section section_header">
-    <div class="container-fluid container-fluid-grid">
-        <div class="grid">
-            <div class="grid-item grid-1"></div>
-            <div class="grid-item grid-2"></div>
-            <div class="grid-item grid-3"></div>
-            <div class="grid-item grid-4"></div>
-            <div class="grid-item grid-5"></div>
-        </div>
-    </div>
     <div class="container-fluid">
         <div class="containerBreak">
             <div class="row containerBreak-row containerBreak-row-left">
@@ -203,7 +201,7 @@
             <a href="#" class="scrollDown-link" aria-label="Scroll Down">
                 <span>Scroll</span>
                 <i class="dtech-icons dtech-scroll"></i>
-                <span>Down</span>
+                <span>Down&nbsp;</span>
             </a>
         </div>
     </div>
@@ -211,15 +209,6 @@
 
 
 <section class="section section_aboutOurCompany">
-    <div class="container-fluid container-fluid-grid">
-        <div class="grid grid-bgWhite">
-            <div class="grid-item grid-1"></div>
-            <div class="grid-item grid-2"></div>
-            <div class="grid-item grid-3"></div>
-            <div class="grid-item grid-4"></div>
-            <div class="grid-item grid-5"></div>
-        </div>
-    </div>
     <div class="section_head section_aboutOurCompany_head">
         <div class="container-fluid">
             <h2 class="section_head--header section_aboutOurCompany_head--header">
@@ -262,15 +251,6 @@
 
 
 <section class="section section_ourServices">
-    <div class="container-fluid container-fluid-grid">
-        <div class="grid">
-            <div class="grid-item grid-1"></div>
-            <div class="grid-item grid-2"></div>
-            <div class="grid-item grid-3"></div>
-            <div class="grid-item grid-4"></div>
-            <div class="grid-item grid-5"></div>
-        </div>
-    </div>
     <div class="section_head section_ourServices_head">
         <div class="container-fluid">
             <h2 class="section_head--header section_ourServices_head--header">
@@ -308,15 +288,6 @@
 
 
 <section class="section section_weFixIt">
-    <div class="container-fluid container-fluid-grid">
-        <div class="grid">
-            <div class="grid-item grid-1"></div>
-            <div class="grid-item grid-2"></div>
-            <div class="grid-item grid-3"></div>
-            <div class="grid-item grid-4"></div>
-            <div class="grid-item grid-5"></div>
-        </div>
-    </div>
     <div class="section_head section_weFixIt_head">
         <div class="container-fluid">
             <h2 class="section_head--header section_weFixIt_head--header">
@@ -465,15 +436,6 @@
 
 
 <section class="section section_footer">
-    <div class="container-fluid container-fluid-grid">
-        <div class="grid">
-            <div class="grid-item grid-1"></div>
-            <div class="grid-item grid-2"></div>
-            <div class="grid-item grid-3"></div>
-            <div class="grid-item grid-4"></div>
-            <div class="grid-item grid-5"></div>
-        </div>
-    </div>
     <div class="container-fluid">
         <div class="section_footer_body">
             <div class="row">
