--- a/ourServices.html
+++ b/ourServices.html
@@ -37,6 +37,13 @@
 
 <section class="section section_navbar">
     <div class="container-fluid container-fluid-grid">
+        <div class="grid grid-bgWhite">
+            <div class="grid-item grid-1"></div>
+            <div class="grid-item grid-2"></div>
+            <div class="grid-item grid-3"></div>
+            <div class="grid-item grid-4"></div>
+            <div class="grid-item grid-5"></div>
+        </div>
         <div class="grid">
             <div class="grid-item grid-1"></div>
             <div class="grid-item grid-2"></div>
@@ -166,7 +173,7 @@
 
 <section class="section section_ourServicesPage">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row containerBreak-row containerBreak-row-right">
             <div class="col-lg-6 pb-5">
                 <div class="section_head">
                     <h1 class="section_head--header">
