--- a/ourServicesInner.html
+++ b/ourServicesInner.html
@@ -37,6 +37,13 @@
 
 <section class="section section_navbar">
     <div class="container-fluid container-fluid-grid">
+        <div class="grid grid-bgWhite">
+            <div class="grid-item grid-1"></div>
+            <div class="grid-item grid-2"></div>
+            <div class="grid-item grid-3"></div>
+            <div class="grid-item grid-4"></div>
+            <div class="grid-item grid-5"></div>
+        </div>
         <div class="grid">
             <div class="grid-item grid-1"></div>
             <div class="grid-item grid-2"></div>
@@ -175,7 +182,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row containerBreak-row containerBreak-row-left">
             <div class="col-lg-6">
                 <div class="section_ourServicesPageInner_imgs">
                     <div class="section_ourServicesPageInner_imgs_item">
