--- a/index.html
+++ b/index.html
@@ -336,11 +336,47 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">proyeksiya ekranlari</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
@@ -361,6 +397,24 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">App</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
@@ -385,6 +439,24 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">müşahidə sistemləri</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
@@ -395,6 +467,24 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
@@ -410,6 +500,24 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">E-mail server</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
@@ -420,11 +528,47 @@
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">Ip - telefoniya</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
                             <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
                                 <span class="section_weFixIt_body_items_item--text">Cağri mərkəzi</span>
+                                <div class="section_weFixIt_body_items_item_body">
+                                    <div class="section_weFixIt_body_items_item_body_items">
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="section_weFixIt_body_items_item_body_item">
+                                            <div class="box pt-56">
+                                                <div class="box-resize">
+                                                    <img src="assets/images/wefixit_img1.png" class="section_weFixIt_body_items_item_body_item--img" alt="we fix it" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </a>
                         </div>
                     </div>
